--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.21.1",
     "faunadb": "4.1.1",
     "next": "10.0.9",
-    "next-auth": "^3.13.3",
+    "next-auth": "^3.13.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
@@ -20,7 +20,7 @@
     "stripe": "^8.139.0"
   },
   "devDependencies": {
-    "@types/next-auth": "^3.7.2",
+    "@types/next-auth": "3.7.1",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.3"
